[package]
name = "git-calver"
description = "carlendar versioning utility"
version = "20.3.0"
authors = ["Shun Takebayashi <shun@takebayashi.asia>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/takebayashi/git-calver"
readme = "README.md"
keywords = ["git", "calver"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
chrono = "0.4"
clap = "2.20.3"
